--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
-    "mongoose": "^6.0.12"
+    "http-errors": "~1.6.3",
+    "ip": "^1.1.5",
+    "mongoose": "^6.0.12",
+    "public-ip": "^4.0.4",
+    "uid2": "^1.0.0"
   }
 }
