--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "config": "^3.3.6",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
     "http-errors": "~1.6.3",
     "ip": "^1.1.5",
     "mongoose": "^6.0.12",
+    "morgan": "^1.10.0",
     "public-ip": "^4.0.4",
     "uid2": "^1.0.0"
   }
