--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "http-errors": "~1.6.3",
     "ip": "^1.1.5",
     "mongoose": "^6.0.12",
+    "morgan": "^1.10.0",
     "public-ip": "^4.0.4",
     "uid2": "^1.0.0"
   }
