--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "config": "^3.3.6",
     "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
     "http-errors": "~1.6.3",
