--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ip": "^1.1.5",
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.0",
     "public-ip": "^4.0.4",
     "uid2": "^1.0.0"
   },
