--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.0",
     "public-ip": "^4.0.4",
+    "stripe": "^8.186.0",
     "uid2": "^1.0.0"
   },
   "devDependencies": {
