--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,12 +1,18 @@
-name: Test
+name: Tests
 
 on:
+  push:
+    branches: [ master ]
   pull_request:
-    types: [opened]
+    branches: [ master ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: ./
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@v2
+      with:
+        node-version: '12'
+    - run: npm ci
+    - run: npm test
