--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "react native app to order mysterious food",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
