--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,5 +14,5 @@ jobs:
     - uses: actions/setup-node@v2
       with:
         node-version: '12'
-    - run: yarn install
-    - run: yarn test
+    - run: npm install
+    - run: npm test
