--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,4 +15,5 @@ jobs:
       with:
         node-version: '12'
     - run: npm install
+    - run: npm install --save-dev jest
     - run: npm test
