--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "react native app to order mysterious food",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -29,6 +29,7 @@
     "uid2": "^1.0.0"
   },
   "devDependencies": {
+    "jest": "^27.3.1",
     "supertest": "^6.1.6"
   }
 }
